[package]
name = "cache-rs"
version = "0.1.0"
authors = ["accelsao <jayzhan211@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
count-min-sketch = "0.1.7"
parking_lot = "0.11.1"
crossbeam-channel = "0.5.0"
cht = "0.4.1"